[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/MinecraftTen32.tres" type="DynamicFont" id=1]
[ext_resource path="res://menus/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://fonts/MinecraftTen56.tres" type="DynamicFont" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.509804 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 410.0
margin_top = 226.0
margin_right = 613.0
margin_bottom = 374.0

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 203.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 3 )
text = "Paused"
align = 1

[node name="Resume" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 203.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 1 )
text = "Resume"

[node name="MainMenu" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 203.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"

[connection signal="button_up" from="ColorRect/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_button_up"]
[connection signal="button_up" from="ColorRect/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_button_up"]
